--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@syncfusion/ej2": "^19.4.48",
+    "@syncfusion/ej2-react-dropdowns": "^19.4.52",
+    "@syncfusion/ej2-react-grids": "^19.4.50",
+    "@syncfusion/ej2-react-inputs": "^19.4.52",
+    "@syncfusion/ej2-react-popups": "^19.4.52",
     "flowbite-react": "^0.5.0",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
